[package]
name = "serve-dir"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper-util = { version = "0.1.11", features = [
    "http1",
    "server",
    "service",
    "tokio",
] }
bytes = "1.10.1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
tokio = { version = "1.44.1", features = [
    "bytes",
    "fs",
    "macros",
    "net",
    "rt",
    "tracing",
] }
http-body = "1.0.1"
http-body-util = "0.1.3"
http = "1.3.1"
headers = "0.4.0"
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.2", features = ["fs", "tracing"] }
axum = { version = "0.8.3", features = ["tracing"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }
futures = "0.3.31"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
ahash = "0.8.12"
scc = { version = "2.3.4", features = ["equivalent"] }
